group 'com.nexthoughts'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'war'
apply plugin: 'org.akhikhl.gretty'

sourceCompatibility = 1.7
targetCompatibility = 1.7

repositories {
    mavenLocal()
    maven { url "https://repo.spring.io/libs-milestone" }
    maven {
        url "https://repo1.maven.org/maven2/"
    }
    mavenCentral()
}

dependencies {
    compile 'ch.qos.logback:logback-classic:1.1.3'
    compile 'cglib:cglib-nodep:2.2'
    compile 'org.graylog.plugins:usage-statistics:2.0.0-alpha.2'
    //Add Servlet Dependencies
    compile 'javax.servlet:jstl:1.2'
    //include in compile only, exclude in the war
    providedCompile 'javax.servlet:servlet-api:2.5'

    //Add Database dependencies
    compile 'mysql:mysql-connector-java:5.1.29'

    //Add hibernate dependencies
    compile 'org.hibernate:hibernate-core:4.3.6.Final'
    compile 'commons-dbcp:commons-dbcp:1.4'

    //TheamLeaf
    compile 'org.thymeleaf:thymeleaf:3.0.3.RELEASE'
    compile 'org.thymeleaf:thymeleaf-spring4:3.0.3.RELEASE'

    //Spring
    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
    compile 'org.springframework:spring-webmvc:4.3.4.RELEASE'
    compile 'org.springframework:spring-jdbc:4.3.4.RELEASE'

    //Spring Security
    compile 'org.springframework.security:spring-security-web:4.2.1.RELEASE'
    compile 'org.springframework.security:spring-security-config:4.2.1.RELEASE'
    compile 'org.springframework.security:spring-security-core:4.2.1.RELEASE'

    //Spring Social
    compile "org.springframework.social:spring-social-core:1.1.4.RELEASE"
    compile "org.springframework.social:spring-social-web:1.1.4.RELEASE"
    compile "org.springframework.social:spring-social-config:1.1.4.RELEASE"
    compile "org.springframework.social:spring-social-security:1.1.4.RELEASE"
    compile "org.springframework.social:spring-social-twitter"

    testCompile group: 'junit', name: 'junit', version: '4.11'
}

buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        //Gretty Embedded Jetty
        classpath 'org.akhikhl.gretty:gretty:+'
    }
}

gretty {
    jvmArgs = [
            '-XX:MaxPermSize=256m',
            '-Xms512m',
            '-Xmx1024m']
    httpPort = 8075
    scanInterval = 1
    fastReload = true
    recompileOnSourceChange = true
    reloadOnClassChange = true
    reloadOnLibChange = true
    contextPath = '/'
    servletContainer = 'jetty9' //tomcat7 or tomcat8
}
